--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!doctype html>
 <html>
-  <head>
-    <title>This is the title of the webpage!</title>
-  </head>
-  <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-  </body>
+  <meta http-equiv="Refresh" content="0; url='https://a.royal-kelvin.ts.net'" /> 
 </html>
+`
