--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!doctype html>
 <html>
-  <meta http-equiv="Refresh" content="0; url='https://a.royal-kelvin.ts.net'" /> 
+  <p style="text-align:center;">UNDER LAMP STACK MAINTENANCE - Feb '25</p>
 </html>
-`
