--- a/index.html
+++ b/index.html
@@ -1,4 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
+
 <html>
-  <p style="text-align:center;">UNDER LAMP STACK MAINTENANCE - Mar '25</p>
+
+<head>
+
+    <title></title>
+
+    <style>
+
+        body {
+
+            background-image: url("APSCCS.jpg");
+
+            background-position: center; 
+
+            background-repeat: no-repeat;
+
+            background-size: cover;
+
+        }
+
+    </style>
+
+</head>
+
+<body>
+
+     <p style="text-align:center;">UNDER LAMP STACK MAINTENANCE - Mar '25</p>
+
+</body>
+
 </html>
+
