--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
             background-image: url("APSCCS.jpg");
 
-            background-position: center; 
+            background-position: center center;
 
             background-repeat: no-repeat;
 
