--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
     <style>
 
         body {
-
-            background-image: url("APSCCS.jpg");
-
-            background-position: center center;
-
-            background-repeat: no-repeat;
-
-            background-size: cover;
-
-            min-height:100%;
-
-        }
+  height: 100%;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  background: black url(APSCCS.jpg) center center no-repeat;;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+}
 
     </style>
 
