--- a/index.html
+++ b/index.html
@@ -8,16 +8,11 @@
 
     <style>
 
-        body {
-  height: 100%;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  background: black url(APSCCS.jpg) center center no-repeat;;
--webkit-background-size: cover;
--moz-background-size: cover;
--o-background-size: cover;
-background-size: cover;
+       body
+{
+    background-image: url(APSCCS.jpg);
+    background-repeat:no-repeat;
+    background-position: center center;
 }
 
     </style>
