--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 {
     background-image: url(APSCCS.jpg);
     background-repeat:no-repeat;
-    background-position: center center;
+    background-position: center top;
 }
 
     </style>
