--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     background-image: url(APSCCS.jpg);
     background-repeat:no-repeat;
     background-position: center top;
+    background-attachment: fixed;
 }
 
     </style>
