--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     background-repeat:no-repeat;
     background-position: center top;
     background-attachment: fixed;
+    background-size: cover;
 }
 
     </style>
