--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     background-position: center top;
     background-attachment: fixed;
     background-size: cover;
+    min-height: 100vh;
 }
 
     </style>
