--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-     <p style="text-align:center;">UNDER LAMP STACK MAINTENANCE - Mar '25</p>
+     <p style="text-align:center;font-size:300%; color:white;">UNDER LAMP STACK MAINTENANCE - Mar '25</p>
 
 </body>
 
