--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     background-attachment: fixed;
     background-size: cover;
     min-height: 100vh;
-    margin: 0;
+    margin: 10%;
 }
 
     </style>
