--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
-    min-height: 100vh;
-    margin: 10%;
+    max-height: 100vh;
+    margin: 0;
 }
 
     </style>
