--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 
     <style>
 
-       body
-{
+       body {
     background-image: url(APSCCS.jpg);
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
-    max-height: 100vh;
+    width: 100vw;
+    height: 100vh;
     margin: 0;
+    overflow: hidden;
 }
 
     </style>
