--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-
-    <title></title>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>APSCCS Maintenance Page</title>
     <style>
-
-       body {
-    background-image: url(APSCCS.jpg);
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
-    background-size: cover;
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-    overflow: hidden;
-}
-
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            overflow: hidden;
+        }
+        body {
+            background-image: url(APSCCS.jpg);
+            background-repeat: no-repeat;
+            background-position: center center;
+            background-attachment: fixed;
+            background-size: cover;
+        }
+        p {
+            text-align: center;
+            font-size: 300%;
+            color: white;
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
     </style>
-
 </head>
 
 <body>
-
-     <p style="text-align:center;font-size:300%; color:white;">UNDER LAMP STACK MAINTENANCE - Mar '25</p>
-
+    <p>UNDER LAMP STACK MAINTENANCE - Mar '25</p>
 </body>
 
 </html>
-
