--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
             color: white;
             margin: 0;
             position: absolute;
-            top: 50%;
+            top: 10%;
             left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translateX(-50%);
+            white-space: nowrap;
         }
     </style>
 </head>
