--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             background-repeat: no-repeat;
             background-position: center center;
             background-attachment: fixed;
-            background-size: cover;
+            background-size: 100% 100%;
         }
         p {
             text-align: center;
@@ -26,7 +26,7 @@
             color: white;
             margin: 0;
             position: absolute;
-            top: 10%;
+            top: 2%;
             left: 50%;
             transform: translateX(-50%);
             white-space: nowrap;
