--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>APSCCS Maintenance Page</title>
+    <title>APSCCS Maintenance</title>
     <style>
         html, body {
             height: 100%;
             margin: 0;
             padding: 0;
             width: 100%;
+            background-color: black;
             overflow: hidden;
         }
         body {
@@ -18,7 +19,7 @@
             background-repeat: no-repeat;
             background-position: center center;
             background-attachment: fixed;
-            background-size: 100% 100%;
+            background-size: contain;
         }
         p {
             text-align: center;
