--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             background-repeat: no-repeat;
             background-position: center center;
             background-attachment: fixed;
-            background-size: contain;
+            background-size: cover;
         }
         p {
             text-align: center;
@@ -32,11 +32,21 @@
             transform: translateX(-50%);
             white-space: nowrap;
         }
+        .clickable-area {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 100px;
+            height: 100px;
+            transform: translate(-50%, -50%);
+            cursor: pointer;
+        }
     </style>
 </head>
 
 <body>
     <p>UNDER LAMP STACK MAINTENANCE - Mar '25</p>
+    <div class="clickable-area" onclick="window.location.href='http://raz.alai-emperor.ts.net';"></div>
 </body>
 
 </html>
