--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>APSCCS Maintenance</title>
+    <title>APSCCS</title>
     <style>
         html, body {
             height: 100%;
@@ -46,7 +46,12 @@
 
 <body>
     <p>UNDER LAMP STACK MAINTENANCE - Mar '25</p>
-    <div class="clickable-area" onclick="window.location.href='http://raz.alai-emperor.ts.net';"></div>
+    <div class="clickable-area" onclick="navigateToURL()"></div>
+    <script>
+        function navigateToURL() {
+            window.location.href = 'http://raz.alai-emperor.ts.net';
+        }
+    </script>
 </body>
 
 </html>
