--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>APSCCS</title>
+    <title>APSCCS Maintenance</title>
     <style>
         html, body {
             height: 100%;
@@ -33,12 +33,11 @@
             white-space: nowrap;
         }
         .clickable-area {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 100px;
-            height: 100px;
-            transform: translate(-50%, -50%);
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             cursor: pointer;
         }
     </style>
