--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>APSCCS Maintenance</title>
+    <title>APSCCS Maintenance Page</title>
     <style>
         html, body {
             height: 100%;
@@ -31,12 +31,18 @@
             left: 50%;
             transform: translateX(-50%);
             white-space: nowrap;
+            cursor: pointer;
         }
     </style>
 </head>
 
 <body>
-    <p>UNDER LAMP STACK MAINTENANCE - Mar '25</p>
+    <p onclick="navigateToURL()">UNDER LAMP STACK MAINTENANCE - Mar '25</p>
+    <script>
+        function navigateToURL() {
+            window.location.href = 'http://raz.alai-emperor.ts.net/phpmyadmin/index.php?route=/database/export&db=information_schema';
+        }
+    </script>
 </body>
 
 </html>
