--- a/index.html
+++ b/index.html
@@ -33,11 +33,21 @@
             white-space: nowrap;
             cursor: pointer;
         }
+        .admin-link {
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            color: black;
+            font-size: 20px;
+            text-decoration: none;
+        }
     </style>
 </head>
 
 <body>
     <p onclick="navigateToURL()">UNDER LAMP STACK MAINTENANCE - Mar '25</p>
+    <a class="admin-link" href="https://raz.alai-emperor.ts.net/wp-login.php?redirect_to=https%3A%2F%2Fraz.alai-emperor.ts.net%2Fwp-admin%2Fsite-editor.php%3FpostType%3Dpage%26postId%3D9%26canvas%3Dedit&reauth=1">ADMIN</a>
     <script>
         function navigateToURL() {
             window.location.href = 'http://raz.alai-emperor.ts.net/phpmyadmin/index.php?route=/database/export&db=information_schema';
