--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             bottom: 10px;
             left: 50%;
             transform: translateX(-50%);
-            color: black;
+            color: blue;
             font-size: 20px;
             text-decoration: none;
         }
