--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
 <body>
     <p onclick="navigateToURL()">UNDER LAMP STACK MAINTENANCE - Mar '25</p>
-    <a class="admin-link" href="https://raz.alai-emperor.ts.net/wp-login.php?redirect_to=https%3A%2F%2Fraz.alai-emperor.ts.net%2Fwp-admin%2Fsite-editor.php%3FpostType%3Dpage%26postId%3D9%26canvas%3Dedit&reauth=1">ADMIN</a>
+    <a class="admin-link" href="https://raz.alai-emperor.ts.net/wp-admin/index.php">ADMIN ACCESS</a>
     <script>
         function navigateToURL() {
-            window.location.href = 'http://raz.alai-emperor.ts.net/phpmyadmin/index.php?route=/database/export&db=information_schema';
+            window.location.href = 'https://raz.alai-emperor.ts.net/phpmyadmin/index.php?route=/database/export&db=information_schema';
         }
     </script>
 </body>
