--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             bottom: 10px;
             left: 50%;
             transform: translateX(-50%);
-            color: blue;
+            color: white;
             font-size: 20px;
             text-decoration: none;
         }
@@ -46,8 +46,8 @@
 </head>
 
 <body>
-    <p onclick="navigateToURL()">UNDER LAMP STACK MAINTENANCE - Mar '25</p>
-    <a class="admin-link" href="https://raz.alai-emperor.ts.net/wp-admin/index.php">ADMIN ACCESS</a>
+    <p onclick="navigateToURL()">        </p>
+    <a class="admin-link" href="https://raz.alai-emperor.ts.net/wp-admin/index.php">CLIENT ACCESS</a>
     <script>
         function navigateToURL() {
             window.location.href = 'https://raz.alai-emperor.ts.net/phpmyadmin/index.php?route=/database/export&db=information_schema';
