--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <body>
     <p onclick="navigateToURL()">        </p>
-    <a class="admin-link" href="https://raz.alai-emperor.ts.net/wp-admin/index.php">CLIENT ACCESS</a>
+    <a class="admin-link" href="https://raz.alai-emperor.ts.net/">CLIENT ACCESS</a>
     <script>
         function navigateToURL() {
             window.location.href = 'https://raz.alai-emperor.ts.net/phpmyadmin/index.php?route=/database/export&db=information_schema';
