--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 
 <body>
-    <p onclick="navigateToURL()">        </p>
+    <p onclick="navigateToURL()"> ​  ​  ​  ​ </p>
     <a class="admin-link" href="https://raz.alai-emperor.ts.net/">CLIENT ACCESS</a>
     <script>
         function navigateToURL() {
