--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             background-repeat: no-repeat;
             background-position: center center;
             background-attachment: fixed;
-            background-size: 31.4% 50%;
+            background-size: contain;
         }
         p {
             text-align: center;
